<resources>
    <string name="app_name">I Am Here</string>
    <string name="activity_home_title">Home</string>
    <string name="fragment_events_title">My Events</string>
    <string name="fragment_home_title">Home</string>
    <string name="fragment_parties_title">My Parties</string>
    <string name="activity_all_events_title">All Events</string>
    <string name="activity_my_parties_title">My Parties</string>
    <string name="activity_event_details_title">Event Details</string>
    <string name="activity_party_details_title">Party Details</string>
    <string name="activity_account_title">Account</string>
    <string name="activity_settings_title">Settings</string>
    <string name="fragment_events_tag" translatable="false">EventsFragmentTag</string>
    <string name="fragment_home_tag" translatable="false">HomeFragmentTag</string>
    <string name="fragment_visits_tag" translatable="false">VisitsFragmentTag</string>
    <string name="fragment_parties_tag" translatable="false">PartiesFragmentTag</string>
    <string name="fragment_relog_dialog_tag" translatable="false">RelogDialogFragmentTag</string>
    <string name="fragment_input_invite_code_dialog_tag" translatable="false">InoutInviteCodeDialogTag</string>
    <string name="fragment_invite_code_dialog_tag" translatable="false">InviteCodeDialogTag</string>
    <string name="fragment_send_announcement_dialog_tag" translatable="false">SendAnnouncementDialogTag</string>
    <string name="fragment_date_picker_dialog_tag" translatable="false">DatePickerDialogTag</string>
    <string name="fragment_event_details_tag" translatable="false">EventDetailsFragmentTag</string>
    <string name="fragment_visits_inner_tag" translatable="false">VisitsIFragmentTag</string>
    <string name="transition_item_layout" translatable="false">ItemLayoutTransition</string>
    <string name="transition_member_count_tv" translatable="false">MemberCountTvTransition</string>
    <string name="transition_member_count_iv" translatable="false">MemberCountIvTransition</string>
    <string name="transition_name_tv" translatable="false">MemberNameTvTransition</string>
    <string name="transition_desc_tv" translatable="false">MemberDescTvTransition</string>
    <string name="splash_get_started_label">Get Started</string>
    <string name="splash_connection_checking">Checking…</string>
    <string name="splash_connection_fail">No Connection</string>
    <string name="splash_connection_success">Connected!</string>
    <string name="splash_connectionTv_label">Couldn\'t connect to the Internet</string>
    <string name="splash_retryBtn_label">Retry</string>
    <string name="onboard_manager_label">Manager</string>
    <string name="onboard_manager_desc_label">Create sessions, assign hosts, assemble parties and invite participators.</string>
    <string name="onboard_host_label">Host</string>
    <string name="onboard_host_desc_label">Hold sessions, track attendance and keep in touch with your attendees.</string>
    <string name="onboard_attendee_label">Attendee</string>
    <string name="onboard_attendee_desc_label">Мark your presence and track attendance, discover new events and stay updated with your current ones.</string>
    <string name="onboard_done_label">Finish</string>
    <string name="verifi_title_label">Phone Verification</string>
    <string name="verifi_description_label">A verification code will be sent to your phone number</string>
    <string name="verifi_code_otpEt_hint">Verification Code</string>
    <string name="verifi_code_otp_expiredTv_label">Verification code expired</string>
    <string name="verifi_code_autocompleteTv_label">Verification completed automatically</string>
    <string name="verifi_code_continueBtn_label_normal">Continue</string>
    <string name="verifi_code_continueBtn_label_progress">Processing</string>
    <string name="verifi_code_continueBtn_label_error">Something went wrong :(</string>
    <string name="verifi_phone_phoneEt_label">Phone Number</string>
    <string name="verifi_phone_continueBtn_label">Continue</string>
    <string name="verifi_phone_resendBtn_label_inactive_prefix">NO CODE? (</string>
    <string name="verifi_phone_resendBtn_label_inactive_suffix">s)</string>
    <string name="verifi_phone_resendBtn_label_active">RESEND CODE</string>
    <string name="verifi_on_otp_sent">Verification code was sent to </string>
    <string name="verifi_on_error">An error occurred while verifying your phone number</string>
    <string name="auth_passwordEt_hint">Password</string>
    <string name="auth_instructionsTv_label">The password must be at least 8 characters long and contain upper and lower case letters and at least one number.</string>
    <string name="auth_password_againEt_label">Repeat password</string>
    <string name="auth_roleIv_label">Roles</string>
    <string name="auth_roleSp_label">Pick a role</string>
    <string name="auth_role_helpIv_label">Help me choose</string>
    <string name="auth_titleTv_registration_label">Registration</string>
    <string name="auth_subtitleTv_registration_label">You will need to create a password for your account.</string>
    <string name="auth_subtitleTv_remote_registration_label_manager">You will need to register for a Manager account to continue.</string>
    <string name="auth_subtitleTv_remote_registration_label_host">You will need to register for a Host account to continue.</string>
    <string name="auth_subtitleTv_remote_registration_label_attendee">You will need to register for an Attendee account to continue.</string>
    <string name="auth_continueBtn_registration_label_normal">Register</string>
    <string name="auth_continueBtn_registration_label_progress">Registering…</string>
    <string name="auth_continueBtn_registration_label_complete">Success!</string>
    <string name="auth_titleTv_login_label">Login</string>
    <string name="auth_subtitleTv_login_label">Welcome back!, enter your password to continue.</string>
    <string name="auth_subtitleTv_remote_login_label_manager">Enter the password to your Manager account to continue.</string>
    <string name="auth_subtitleTv_remote_login_label_host">Enter the password to your Host account to continue.</string>
    <string name="auth_subtitleTv_remote_login_label_attendee">Enter the password to your Attendee account to continue.</string>
    <string name="auth_continueBtn_login_label">Login</string>
    <string name="auth_continueBtn_login_label_progress">Logging in…</string>
    <string name="auth_continueBtn_login_label_complete">Success!</string>
    <string name="auth_validation_empty">This can\'t be empty</string>
    <string name="auth_validation_invalid">Invalid password</string>
    <string name="auth_validation_mismatch">Passwords don\'t match</string>
    <string name="auth_bad_input">Fields filled incorrectly</string>
    <string name="auth_bad_role">Role not picked</string>
    <string name="auth_re_log_authenticate">Authenticate</string>
    <string name="auth_re_log_authenticate_msg">This session has expired, you will need to authenticate again.</string>
    <string name="auth_login_wrong_password">Incorrect password!</string>
    <string name="auth_login_unknown">An unexpected error occurred while logging in.</string>
    <string name="auth_registration_user_exists">An account with this phone number already exists.</string>
    <string name="auth_registration_unknown">An unexpected error occurred while logging in.</string>
    <string name="home_role_change_toast">Logged in as</string>
    <string name="home_nav_drawer_open">Open navigation drawer</string>
    <string name="home_nav_drawer_close">Close navigation drawer</string>
    <string name="nav_header_dropdownIv_label">Show/Hide Roles</string>
    <string name="nav_all_events">All Events</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_invite_codes_title">Invite Codes</string>
    <string name="nav_account_title">Account</string>
    <string name="nav_my_parties_title">My Parties</string>
    <string name="nav_common_title">Common</string>
    <string name="bnav_host_events_label">Events</string>
    <string name="bnav_host_parties_label">Parties</string>
    <string name="bnav_nav_attendee_visits_label">Visits</string>
    <string name="bnav_nav_attendee_home_label">Home</string>
    <string name="invite_code_addBtn_label">Add New Code</string>
    <string name="invite_code_empty_view_label">No Invite Codes to show!</string>
    <string name="invite_code_infoTv_attendee_label">Invite codes are used to join Parties. Add any invite codes given to you below. To remove an existing invite code, simply swipe it away.</string>
    <string name="invite_code_infoTv_host_label">Invite codes are used to join Events. Add any invite codes given to you below. To remove an existing invite code, simply swipe it away.</string>
    <string name="invite_code_doneBtn_label">Done</string>
    <string name="input_invite_code_title">Add Code</string>
    <string name="input_invite_code_okBtn">OK</string>
    <string name="input_invite_code_cancelBtn">Cancel</string>
    <string name="input_invite_code_nameEt_label">Code</string>
    <string name="date_picker_desc">Date Picker</string>
    <string name="parties_empty_view_label">You aren\'t a part of any Party yet!</string>
    <string name="all_events_empty_view_label">You haven\'t joined any Events yet!</string>
    <string name="my_parties_empty_view_label">You haven\'t joined any Parties yet!</string>
    <string name="events_empty_view_label">There aren\'t any Events to show</string>
    <string name="account_nameEt_label">Name</string>
    <string name="account_emailEt_label">Email</string>
    <string name="account_show_emailChk_label">Show email publicly on my profile</string>
    <string name="account_logoutIv_label">Logout</string>
    <string name="account_edit_applyIv_label">Edit/Apply</string>
    <string name="account_details_headerTv_label">About</string>
    <string name="account_joinedTv_label">Joined:</string>
    <string name="account_bad_email">Invalid Email</string>
    <string name="account_email_help">You will be able to recover your account password via this Email.</string>
    <string name="event_details_startDateTv_label">Start Date</string>
    <string name="event_details_finishDateTv_label">Finish Date</string>
    <string name="event_details_hostsTv_label">Hosts:</string>
    <string name="event_details_partiesTv_label">Parties:</string>
    <string name="event_details_inviteCodeTv_label">Invite Code</string>
    <string name="event_details_tabLy_info">Information</string>
    <string name="event_details_tabLy_who_is_here">Who Is Here?</string>
    <string name="event_details_dragView_qrcode_label">QR Code</string>
    <string name="event_details_dragView_error_label">Failed to generate QRCode</string>
    <string name="action_actions_label">Actions</string>
    <string name="action_announcement_label">Send Announcement</string>
    <string name="action_leave_dlg_msg">Are you sure?</string>
    <string name="action_leave_party_label">Leave Party</string>
    <string name="scanner_complete_stateTv_success">Registration Successful!</string>
    <string name="scanner_complete_stateTv_fail">Registration Failed!</string>
    <string name="scanner_complete_retryBtn_label">Try Again</string>
    <string name="scanner_complete_returnBtn_label">Return</string>
    <string name="send_ann_cancelBtn_label">Cancel</string>
    <string name="send_ann_sendBtn_label">Send</string>
    <string name="send_ann_bodyEt_label">Announcement</string>
    <string name="send_ann_doneBtn_label">Done</string>
    <string name="send_ann_sending_msg">Sending…</string>
    <string name="invite_code_infoTv_label">The announcement will appear as a notification on the devices of all members in this event.</string>
    <string name="party_details_member_count_labelTv_label">Members</string>
</resources>