<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"

    android:orientation="horizontal"

    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:background="@drawable/border_white_back_b"
    android:transitionName="@string/transition_item_layout" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/party_member_countIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backg_circle"
            android:transitionName="@string/transition_member_count_iv"

            tools:backgroundTint="#00796B"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/party_member_countTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:textSize="23sp"
            android:fontFamily="@font/pt_serif_bold"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:transitionName="@string/transition_member_count_tv"

            tools:text="1.5K"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/party_nameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/pt_serif"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:maxLines="2"
            android:ellipsize="end"
            android:transitionName="@string/transition_name_tv"

            tools:text="IKBO-02-17"/>

        <TextView
            android:id="@+id/party_descTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/pt_serif"
            android:textSize="18sp"
            android:textColor="#B0000000"
            android:maxLines="3"
            android:ellipsize="end"
            android:justificationMode="inter_word"
            android:transitionName="@string/transition_desc_tv"

            tools:text="Some description for the group"
            />


    </LinearLayout>

</LinearLayout>