<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PartyDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/party_details_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/party_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/party_detailsLy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"

            android:transitionName="@string/transition_item_layout"
            android:background="@android:color/white">


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/party_details_member_countIv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/backg_circle"
                    android:transitionName="@string/transition_member_count_iv"
                    tools:backgroundTint="#00796B"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/party_details_member_countTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="23sp"
                        android:fontFamily="@font/pt_serif_bold"
                        android:textColor="@color/white"
                        android:transitionName="@string/transition_member_count_tv"
                        android:includeFontPadding="false"

                        tools:text="1.5K"/>

                    <TextView
                        android:id="@+id/party_details_member_count_labelTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-4dp"

                        android:textSize="13sp"
                        android:fontFamily="@font/pt_serif_bold"
                        android:textColor="#F3FFFFFF"
                        android:textAlignment="center"
                        android:text="@string/party_details_member_count_labelTv_label"/>

                </LinearLayout>

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/party_details_nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/pt_serif"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:transitionName="@string/transition_name_tv"

                    tools:text="IKBO-02-17"/>

                <TextView
                    android:id="@+id/party_details_descTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/pt_serif"
                    android:textSize="18sp"
                    android:textColor="#B0000000"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:transitionName="@string/transition_desc_tv"

                    tools:text="Some description for the group"
                    />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#ECECEC"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>