<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:orientation="horizontal"
            android:background="@drawable/border_white_back_all"

            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"

                android:src="@drawable/ic_info_outline_light_black_40dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/invite_code_infoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/roboto_slab"
                android:textColor="#000000"
                android:textSize="15sp"
                android:text="@string/invite_code_infoTv_label"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/send_ann_bodyLy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                custom:counterEnabled="true"
                custom:counterMaxLength="400"
                custom:errorTextColor="@color/colorError"
                android:gravity="bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/send_ann_bodyEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/send_ann_bodyEt_label"

                    android:textColor="#575757"
                    android:fontFamily="@font/roboto_slab"
                    android:textSize="18sp"

                    android:lines="5"
                    android:maxLines="10"
                    android:maxLength="400"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:importantForAutofill="no">

                    <requestFocus/>

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/invite_code_snackbarLy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/send_ann_sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:padding="15dp"

                android:text="@string/send_ann_sendBtn_label"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_slab"

                android:drawableEnd="@drawable/ic_send_white_24dp"
                android:drawablePadding="5dp"

                custom:pb_colorNormal="@color/colorGeneralAccent"
                custom:pb_colorPressed="@color/colorGeneralAccentDark"

                custom:pb_colorComplete="@android:color/holo_green_dark"

                custom:pb_textProgress="@string/send_ann_sending_msg"
                custom:pb_colorProgress="@color/colorGeneralAccent"

                custom:pb_textError="@string/send_ann_sendBtn_label"
                custom:pb_colorError="@android:color/holo_red_dark"

                custom:pb_colorDisabled="#f0f1f1"
                custom:pb_textColorDisabled="#b9baba"
                custom:pb_textColorEnabled="@android:color/white"
                tools:visibility="visible" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/send_ann_cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/send_ann_sendBtn"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:padding="15dp"

                android:text="@string/send_ann_cancelBtn_label"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_slab"

                custom:pb_colorNormal="@color/colorGeneralAccent"
                custom:pb_colorPressed="@color/colorGeneralAccentDark"

                custom:pb_colorDisabled="#f0f1f1"
                custom:pb_textColorDisabled="#b9baba"
                custom:pb_textColorEnabled="@android:color/white"
                tools:visibility="visible" />

            <Button
                android:id="@+id/send_ann_doneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:padding="15dp"

                android:text="@string/send_ann_doneBtn_label"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_slab"
                android:visibility="gone"

                style="@style/Widget.AppCompat.Button.Colored" />

        </RelativeLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>